--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -1,23 +1,19 @@
-<?xml version='1.0' encoding='UTF-8' ?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns:p="http://primefaces.org/ui"
-      xmlns:h="http://java.sun.com/jsf/html"
-      xmlns="http://www.w3.org/1999/xhtml">
-<h:head>
-    <title>Login Form</title>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+</head>
+<body>
+<panel header="Login From">
+    <form method="POST" action="j_security_check">
+        Username: <input type="text" name="j_username"/>
+        Password: <input type="password" name="j_password"/>
+        <br/>
+        <input type="submit" value="Login"/>
+        <input type="reset" value="Reset"/>
+    </form>
 
-
-</h:head>
-<h:body>
-    <p:panel header="Login From">
-        <form method="POST" action="j_security_check">
-            Username: <input type="text" name="j_username" />
-            Password: <input type="password" name="j_password" />
-            <br />
-            <input type="submit" value="Login" />
-            <input type="reset" value="Reset" />
-        </form>
-
-    </p:panel>
-</h:body>
+</panel>
+</body>
 </html>
