--- a/src/main/webapp/loginNEW.html
+++ b/src/main/webapp/loginNEW.html
@@ -44,16 +44,16 @@
                 <md-input-container md-no-float class="md-block">
                     <label>Email</label>
                     <md-icon><i class="material-icons">account_box</i></md-icon>
-                    <input ng-model="user.j_username" type="email" name="j_username">
+                    <input ng-model="userClient.j_username" type="email" name="j_username">
                 </md-input-container>
                 <md-input-container md-no-float class="md-block">
                     <label>Password</label>
                     <md-icon><i class="material-icons">lock_open</i></md-icon>
-                    <input ng-model="user.j_password" type="password" name="j_password">
+                    <input ng-model="userClient.j_password" type="password" name="j_password">
                 </md-input-container>
             </md-card-content>
             <md-card-actions layout="row" layout-align="end center">
-                <md-button style="background-color: #3fa86b" ng-click="Login2(user)">Login</md-button>
+                <md-button style="background-color: #3fa86b" ng-click="Login2(userClient)">Login</md-button>
                 <md-button style="background-color: #e76729" ng-click="SignUP()">Sign up</md-button>
             </md-card-actions>
         </md-card>
